@@ -16,6 +16,18 @@
  */
 package spark.servlet;
 
+import java.io.IOException;
+
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequestWrapper;
+import jakarta.servlet.http.HttpServletResponse;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -25,12 +37,6 @@ import spark.http.matching.MatcherFilter;
 import spark.route.ServletRoutes;
 import spark.staticfiles.StaticFilesConfiguration;
 import spark.utils.StringUtils;
-
-import javax.servlet.*;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletRequestWrapper;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
 
 /**
  * Filter that can be configured to be used in a web.xml file.
@@ -96,7 +102,7 @@ public class SparkFilter implements Filter {
     protected SparkApplication getApplication(String applicationClassName) throws ServletException {
         try {
             Class<?> applicationClass = Class.forName(applicationClassName);
-            return (SparkApplication) applicationClass.newInstance();
+            return (SparkApplication) applicationClass.getConstructor().newInstance();
         } catch (Exception exc) {
             throw new ServletException(exc);
         }
